ipwhitelist.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-ipwhitelist
  namespace: vaultwarden
spec:
  ipWhiteList:
    sourceRange:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
