ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.domain.tld`)
      kind: Rule
      services:
        - name: vw-ui
          port: 80
      middlewares:
        - name: default-headers
        - name: local-ipwhitelist
  tls:
    secretName: TLS_SECRET_NAME
